--- a/Test.html
+++ b/Test.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <h1>Welcome</h1>
-        <p>Compagnie kirghizistan</p>
+        <p>Compagnie kyrgyzstan</p>
     </body>
 
 </html>
