Icône update Test.html

--- a/Test.html
+++ b/Test.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="icon" href="Icône.ico">
         <title>Compagnie aérienne</title>
     <meta charset="utf-8"/>
 
