--- a/Test.html
+++ b/Test.html
@@ -1,14 +1,25 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="icon" href="Icône.ico">
         <title>Compagnie aérienne</title>
     <meta charset="utf-8"/>
 
     </head>
     <body>
-        <h1>Welcome</h1>
-        <p>Compagnie kyrgyzstan</p>
+    <h1>Welcome</h1>
+    <p>Compagnie kirghizistan</p>
+        <form method="POST" action="traitement.php">
+         <p>
+            Choisissez votre genre : <br/><br/>
+            <input  type="checkbox" name="homme" id="homme"
+checked="checked"/><label for="homme">
+Masculin</label><br/>
+            <input type="checkbox" name="femme"
+id="femme"/><label for="femme"> Féminin</label><br/>
+
+         </p>
+        </form>
     </body>
 
+</html>
 </html>
