--- a/Test.html
+++ b/Test.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title style="font-family:verdana;color:crimson;">Compagnie aérienne</title>
+        <title>Compagnie aérienne</title>
         <meta charset="utf-8"/>
         <link rel="stylesheet" href
     
     </head>
     <body>
-    <h1>Welcome</h1>
+    <h1 style="font-family:verdana;color:crimson;">>Welcome</h1>
     <p>Compagnie kirghizistan</p>
         <form method="POST" action="traitement.php">
          <p>
