--- a/Test.html
+++ b/Test.html
@@ -7,7 +7,7 @@
     
     </head>
     <body>
-    <h1 style="font-family:verdana;color:crimson;">>Welcome</h1>
+    <h1 style="font-family:verdana;color:crimson;">Welcome</h1>
     <p>Compagnie kirghizistan</p>
         <form method="POST" action="traitement.php">
          <p>
