--- a/Test.html
+++ b/Test.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Compagnie aérienne</title>
+        <title>Air Kyrgyzstan</title>
         <meta charset="utf-8"/>
         <link rel="stylesheet" href
     
