--- a/Test.html
+++ b/Test.html
@@ -3,24 +3,19 @@
     <head>
         <title>Air Kyrgyzstan</title>
         <meta charset="utf-8"/>
-        <link rel="stylesheet" href
-    
+        <link rel="stylesheet" href>
     </head>
     <body>
     <h1 style="font-family:verdana;color:crimson;">Welcome</h1>
-    <p>Compagnie kirghizistan</p>
-        <form method="POST" action="traitement.php">
-         <p>
-            Choisissez votre genre : <br/><br/>
-            <input  type="checkbox" name="homme" id="homme"
-checked="checked"/><label for="homme">
-Masculin</label><br/>
-            <input type="checkbox" name="femme"
-id="femme"/><label for="femme"> Féminin</label><br/>
-
-         </p>
+    <p>Compagnie Kyrgyzstan</p>
+        <form>
+        <p>
+           Choisissez votre genre : <br>
+           <input  type="radio" id="homme" name="genre" value="Homme"/>
+           <label for="homme">Masculin</label><br>
+           <input type="radio" id="femme" name="genre" value/>
+           <label for="femme">Féminin</label><br>
+        </p>
         </form>
     </body>
-
-</html>
 </html>
