--- a/Test.html
+++ b/Test.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="icon" href="Icône.ico">
         <title>Air Kyrgyzstan</title>
         <meta charset="utf-8"/>
         <link rel="stylesheet" href>
