--- a/Test.html
+++ b/Test.html
@@ -11,10 +11,10 @@
         <form>
         <p>
            Choisissez votre genre : <br>
-           <input  type="radio" id="homme" name="genre" value="Homme"/>
-           <label for="homme">Masculin</label><br>
-           <input type="radio" id="femme" name="genre" value/>
-           <label for="femme">Féminin</label><br>
+           <input type="radio" id="homme" name="genre"/>
+           <label for="homme">Homme</label><br>
+           <input type="radio" id="femme" name="genre"/>
+           <label for="femme">Femme</label><br>
         </p>
         </form>
     </body>
