--- a/Test.html
+++ b/Test.html
@@ -13,9 +13,9 @@
         <p>
            Choisissez votre genre : <br>
            <input  type="radio" id="homme" name="genre" value="Homme"/>
-           <label for="homme">Masculin</label><br>
+           <label for="homme">Homme</label><br>
            <input type="radio" id="femme" name="genre" value/>
-           <label for="femme">Féminin</label><br>
+           <label for="femme">Femme</label><br>
         </p>
         </form>
     </body>
