--- a/code/acheter-billet.html
+++ b/code/acheter-billet.html
@@ -10,8 +10,8 @@
   <!-- Section avec image de fond et texte pour "Acheter un billet" -->
   <div id="image">
     <div id="image-content">
-      <h1>Air Kyrgyzstan</h1>
-      <p>Aller partout depuis partout</p>
+      <h1 style="color:bisque">Air Kyrgyzstan</h1>
+      <p style="color:bisque">Aller partout depuis partout</p>
     </div>
   </div>
 
