--- a/code/index.html
+++ b/code/index.html
@@ -10,8 +10,8 @@
   <!-- Image d'accueil -->
   <div id="image">
     <div id="image-content">
-      <h1>Air Kyrgyzstan</h1>
-      <p>Aller partout depuis partout</p>
+      <h1 style="color:bisque">Air Kyrgyzstan</h1>
+      <p style="color:bisque">Aller partout depuis partout</p>
     </div>
   </div>
 
@@ -26,12 +26,14 @@
   <!-- Contenu de la page -->
   <div id="home">
     <h2>Bienvenue sur notre site</h2>
-    <p>
+    <pre style="font-family: Arial, Helvetica, sans-serif;">
       Air Kyrgyzstan vous offre des vols vers les plus belles destinations d'Asie Centrale et au-delà.
       Découvrez notre flotte moderne, notre service client primé, et réservez vos billets facilement.
-      <br><br>
-      Notre mission est de relier le Kirghizistan au monde entier tout en garantissant confort et sécurité.
-    </p>
+      <hr>
+      <b>Notre mission est de relier le Kyrgyzstan au monde entier tout en garantissant confort et sécurité.</b>
+    </pre>
+      <hr>
+      <h2 style="text-align:center;">Nos plus belles destinations, qui n'attendent que vous :</h2>
   </div>
 
 </body>
