--- a/Projet web pour ouvrir html/avis.html
+++ b/Projet web pour ouvrir html/avis.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
   <link rel="icon" href="Icône.ico">
-  <meta charset="UTF-8">
+  <meta charset="utf-8">
   <title>Avis - Air Kyrgyzstan</title>
   <link rel="stylesheet" href="style.css">
 </head>
@@ -11,8 +11,8 @@
   <!-- Section avec image de fond et texte pour "Acheter un billet" -->
   <div id="image">
     <div id="image-content">
-     <h1 style="color:BIsque";>Air Kyrgyzstan</h1>
-      <p style="color:Bisque">Aller partout depuis partout</p>
+     <h1 style="color:#002b5c";>Air Kyrgyzstan</h1>
+      <p style="color:#b30000">Aller partout depuis partout</p>
     </div>
   </div>
   
@@ -25,10 +25,23 @@
   </div>
   
   <!-- Contenu de la page -->
-  <div id="avis">
-    <h2>Avis</h2>
-    <p>Lisez les avis de nos clients satisfaits et laissez-nous le vôtre.</p>
-  </div>
+  <h2 style="font-size: 25px;">Laissez-nous un avis !</h2>
+  <form action="/avis_ajout" method="POST">
+    <label for="name">Nom : <input type="text" id="name" name="new_avis" required></label>
+    <label for="rating">Donnez-nous une note ! (Entre 0 et 5)<input type="number" id="rating" name="new_avis" min="0" max="5" step="0.1"></label>
+	  <label>Message : <input type="text" name="new_avis"></label>
+	  <input type="submit" value="Envoyer">
+	</form>
 
+    <ul>
+	  	{% for new_avis in les_avis %}
+  <div id="avis">
+	  	<b>Message de {{new_avis[0]}} avec une note de satisfaction de {{new_avis[1]}}/5 !</b>
+      <br><br>
+      <div style="font-family: 'Times New Roman', Times, serif;font-size: 17px;">{{new_avis[2]}}</div>
+  </div>
+	  	{% endfor %}
+	  </ul>
+	
 </body>
 </html>
