--- a/Projet web pour ouvrir html/index.html
+++ b/Projet web pour ouvrir html/index.html
@@ -11,8 +11,8 @@
   <!-- Image d'accueil -->
   <div id="image">
     <div id="image-content">
-      <h1 style="color:Bisque";>Air Kyrgyzstan</h1>
-      <p style="color:Bisque">Aller partout depuis partout</p>
+     <h1 style="color:#002b5c";>Air Kyrgyzstan</h1>
+      <p style="color:#b30000">Aller partout depuis partout</p>
     </div>
   </div>
 
