--- a/Projet web pour ouvrir html/contact.html
+++ b/Projet web pour ouvrir html/contact.html
@@ -11,8 +11,8 @@
 <!-- Section avec image de fond et texte pour "Contact" -->
   <div id="image">
     <div id="image-content">
-      <h1 style="color:BIsque";>Air Kyrgyzstan</h1>
-      <p style="color:Bisque">Aller partout depuis partout</p>
+     <h1 style="color:#002b5c";>Air Kyrgyzstan</h1>
+      <p style="color:#b30000">Aller partout depuis partout</p>
     </div>
   </div>
   
@@ -22,27 +22,20 @@
     <a href="acheter-billet.html">Acheter un billet</a>
     <a href="avis.html">Avis</a>
     <a href="contact.html" class="active">Contact</a>
-  </div>
-  
+  </div> 
 
   <!-- Contenu de la page -->
   <div id="contact">
     <h2>Contact</h2>
     <p>Contactez-nous pour toute information ou assistance. Nous vous répondrons dans les plus brefs délais.</p>
-
-    <form>
-      <label for="name">Nom :</label>
-      <input type="text" id="name" name="name" required>
-
-      <label for="email">Adresse e-mail :</label>
-      <input type="email" id="email" name="email" required>
-
-      <label for="message">Message :</label>
-      <textarea id="message" name="message" required></textarea>
-
+    <form action="/contact_ajout" method="POST">
+      <label for="name">Nom : <input type="text" id="name" name="new_contact" required></label>
+      <label for="email">Adresse e-mail : <input type="email" id="email" name="new_contact" required></label>
+      <label for="message">Message : <textarea id="message" name="new_contact" required></textarea></label>
       <button type="submit">Envoyer</button>
     </form>
   </div>
 
+  
 </body>
 </html>
