--- a/Projet web pour ouvrir html/index.html
+++ b/Projet web pour ouvrir html/index.html
@@ -92,6 +92,17 @@
       <img src="Ala_archa.jpg" alt="Parc Ala_archa" width=100% height=100%>
     </div>
   </div>
+  <!-- Pied de page -->
+<footer id="footer">
+  <div class="footer-content">
+    <p>&copy; 2025 Air Kyrgyzstan. Tous droits réservés.</p>
+    <p>
+      <a href="contact.html">Contact</a> |
+      <a href="mentions-legales.html">Mentions légales</a> |
+      <a href="https://www.instagram.com/kyrgyzstan.guide/" target="_blank">Instagram</a>
+    </p>
+  </div>
+</footer>
 
 </body>
 </html>
