--- a/Projet web pour ouvrir html/contact.html
+++ b/Projet web pour ouvrir html/contact.html
@@ -36,6 +36,17 @@
     </form>
   </div>
 
+  <!-- Pied de page -->
+<footer id="footer">
+  <div class="footer-content">
+    <p>&copy; 2025 Air Kyrgyzstan. Tous droits réservés.</p>
+    <p>
+      <a href="contact.html">Contact</a> |
+      <a href="mentions-legales.html">Mentions légales</a> |
+      <a href="https://www.instagram.com/kyrgyzstan.guide/" target="_blank">Instagram</a>
+    </p>
+  </div>
+</footer>
   
 </body>
 </html>
