--- a/Projet web pour ouvrir html/mentions-legales.html
+++ b/Projet web pour ouvrir html/mentions-legales.html
@@ -23,7 +23,7 @@
     <ul>
       <li>Paul</li>
       <li>Guillaume</li>
-      <li>Edouardo</li>
+      <li>Edoardo</li>
     </ul>
 
     <p><strong>Hébergement du site :</strong></p>
@@ -40,7 +40,7 @@
   </div>
 
   <footer>
-    <p>&copy; 2025 Air Kyrgyzstan — Paul, Guillaume et Edouardo</p>
+    <p>&copy; 2025 Air Kyrgyzstan — Paul, Guillaume et Edoardo</p>
   </footer>
 
 </body>
