--- a/Projet web pour ouvrir html/acheter-billet.html
+++ b/Projet web pour ouvrir html/acheter-billet.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
+  <link rel="icon" href="Icône.ico">
   <meta charset="UTF-8">
   <title>Acheter un billet - Air Kyrgyzstan</title>
   <link rel="stylesheet" href="style.css">
@@ -111,234 +112,194 @@
   </div>
 
   <div class="row">
-    <div class="seat"></div>
-    <div class="seat"></div>
-    <div class="seat"></div>
+    <div id="A8" class="seat"></div>
+    <div id="B8" class="seat"></div>
+    <div id="C8" class="seat"></div>
     <div class="hallway">8</div>
-    <div class="seat"></div>
-    <div class="seat"></div>
-    <div class="seat"></div>
-  </div>
+    <div id="D8" class="seat"></div>
+    <div id="E8" class="seat"></div>
+    <div id="F8" class="seat"></div>
+</div>
 
-  <div class="row">
-    <div class="seat"></div>
-    <div class="seat"></div>
-    <div class="seat"></div>
+<div class="row">
+    <div id="A9" class="seat"></div>
+    <div id="B9" class="seat"></div>
+    <div id="C9" class="seat"></div>
     <div class="hallway">9</div>
-    <div class="seat"></div>
-    <div class="seat"></div>
-    <div class="seat"></div>
-  </div>
+    <div id="D9" class="seat"></div>
+    <div id="E9" class="seat"></div>
+    <div id="F9" class="seat"></div>
+</div>
 
-  <div class="row">
-    <div class="seat"></div>
-    <div class="seat"></div>
-    <div class="seat"></div>
+<div class="row">
+    <div id="A10" class="seat"></div>
+    <div id="B10" class="seat"></div>
+    <div id="C10" class="seat"></div>
     <div class="hallway">10</div>
-    <div class="seat"></div>
-    <div class="seat"></div>
-    <div class="seat"></div>
-  </div>
+    <div id="D10" class="seat"></div>
+    <div id="E10" class="seat"></div>
+    <div id="F10" class="seat"></div>
+</div>
 
-  <div class="row">
-    <div class="seat"></div>
-    <div class="seat"></div>
-    <div class="seat"></div>
+<div class="row">
+    <div id="A11" class="seat"></div>
+    <div id="B11" class="seat"></div>
+    <div id="C11" class="seat"></div>
     <div class="hallway">11</div>
-    <div class="seat"></div>
-    <div class="seat"></div>
-    <div class="seat"></div>
-  </div>
+    <div id="D11" class="seat"></div>
+    <div id="E11" class="seat"></div>
+    <div id="F11" class="seat"></div>
+</div>
+
 
   <div class="sidehallway">
   </div>
 
   <div class="row">
     <div class="hallway"></div>
-    <div class="seat"></div>
-    <div class="seat"></div>
+    <div id="B12" class="seat"></div>
+    <div id="C12" class="seat"></div>
     <div class="hallway">12</div>
-    <div class="seat"></div>
-    <div class="seat"></div>
+    <div id="D12" class="seat"></div>
+    <div id="E12" class="seat"></div>
     <div class="hallway"></div>
-  </div>
+</div>
 
-  <div class="row">
-    <div class="seat"></div>
-    <div class="seat"></div>
-    <div class="seat"></div>
+<div class="row">
+    <div id="A14" class="seat"></div>
+    <div id="B14" class="seat"></div>
+    <div id="C14" class="seat"></div>
     <div class="hallway">14</div>
-    <div class="seat"></div>
-    <div class="seat"></div>
-    <div class="seat"></div>
-  </div>
+    <div id="D14" class="seat"></div>
+    <div id="E14" class="seat"></div>
+    <div id="F14" class="seat"></div>
+</div>
 
 <div class="row">
-    <div class="seat"></div>
-    <div class="seat"></div>
-    <div class="seat"></div>
+    <div id="A15" class="seat"></div>
+    <div id="B15" class="seat"></div>
+    <div id="C15" class="seat"></div>
     <div class="hallway">15</div>
-    <div class="seat"></div>
-    <div class="seat"></div>
-    <div class="seat"></div>
-  </div>
+    <div id="D15" class="seat"></div>
+    <div id="E15" class="seat"></div>
+    <div id="F15" class="seat"></div>
+</div>
 
 <div class="row">
-    <div class="seat"></div>
-    <div class="seat"></div>
-    <div class="seat"></div>
+    <div id="A16" class="seat"></div>
+    <div id="B16" class="seat"></div>
+    <div id="C16" class="seat"></div>
     <div class="hallway">16</div>
-    <div class="seat"></div>
-    <div class="seat"></div>
-    <div class="seat"></div>
-  </div>
+    <div id="D16" class="seat"></div>
+    <div id="E16" class="seat"></div>
+    <div id="F16" class="seat"></div>
+</div>
+
 
 <div class="row">
-    <div class="seat"></div>
-    <div class="seat"></div>
-    <div class="seat"></div>
+    <div id="A17" class="seat"></div>
+    <div id="B17" class="seat"></div>
+    <div id="C17" class="seat"></div>
     <div class="hallway">17</div>
-    <div class="seat"></div>
-    <div class="seat"></div>
-    <div class="seat"></div>
-  </div>
+    <div id="D17" class="seat"></div>
+    <div id="E17" class="seat"></div>
+    <div id="F17" class="seat"></div>
+</div>
 
 <div class="row">
-    <div class="seat"></div>
-    <div class="seat"></div>
-    <div class="seat"></div>
+    <div id="A18" class="seat"></div>
+    <div id="B18" class="seat"></div>
+    <div id="C18" class="seat"></div>
     <div class="hallway">18</div>
-    <div class="seat"></div>
-    <div class="seat"></div>
-    <div class="seat"></div>
-  </div>
+    <div id="D18" class="seat"></div>
+    <div id="E18" class="seat"></div>
+    <div id="F18" class="seat"></div>
+</div>
 
 <div class="row">
-    <div class="seat"></div>
-    <div class="seat"></div>
-    <div class="seat"></div>
+    <div id="A19" class="seat"></div>
+    <div id="B19" class="seat"></div>
+    <div id="C19" class="seat"></div>
     <div class="hallway">19</div>
-    <div class="seat"></div>
-    <div class="seat"></div>
-    <div class="seat"></div>
-  </div>
+    <div id="D19" class="seat"></div>
+    <div id="E19" class="seat"></div>
+    <div id="F19" class="seat"></div>
+</div>
 
 <div class="row">
-    <div class="seat"></div>
-    <div class="seat"></div>
-    <div class="seat"></div>
+    <div id="A20" class="seat"></div>
+    <div id="B20" class="seat"></div>
+    <div id="C20" class="seat"></div>
     <div class="hallway">20</div>
-    <div class="seat"></div>
-    <div class="seat"></div>
-    <div class="seat"></div>
-  </div>
+    <div id="D20" class="seat"></div>
+    <div id="E20" class="seat"></div>
+    <div id="F20" class="seat"></div>
+</div>
+
 
 <div class="row">
-    <div class="seat"></div>
-    <div class="seat"></div>
-    <div class="seat"></div>
+    <div id="A21" class="seat"></div>
+    <div id="B21" class="seat"></div>
+    <div id="C21" class="seat"></div>
     <div class="hallway">21</div>
-    <div class="seat"></div>
-    <div class="seat"></div>
-    <div class="seat"></div>
-  </div>
+    <div id="D21" class="seat"></div>
+    <div id="E21" class="seat"></div>
+    <div id="F21" class="seat"></div>
+</div>
 
 <div class="row">
-    <div class="seat"></div>
-    <div class="seat"></div>
-    <div class="seat"></div>
+    <div id="A22" class="seat"></div>
+    <div id="B22" class="seat"></div>
+    <div id="C22" class="seat"></div>
     <div class="hallway">22</div>
-    <div class="seat"></div>
-    <div class="seat"></div>
-    <div class="seat"></div>
-  </div>
+    <div id="D22" class="seat"></div>
+    <div id="E22" class="seat"></div>
+    <div id="F22" class="seat"></div>
+</div>
 
 <div class="row">
-    <div class="seat"></div>
-    <div class="seat"></div>
-    <div class="seat"></div>
+    <div id="A23" class="seat"></div>
+    <div id="B23" class="seat"></div>
+    <div id="C23" class="seat"></div>
     <div class="hallway">23</div>
-    <div class="seat"></div>
-    <div class="seat"></div>
-    <div class="seat"></div>
-  </div>
+    <div id="D23" class="seat"></div>
+    <div id="E23" class="seat"></div>
+    <div id="F23" class="seat"></div>
+</div>
 
 <div class="row">
-    <div class="seat"></div>
-    <div class="seat"></div>
-    <div class="seat"></div>
+    <div id="A24" class="seat"></div>
+    <div id="B24" class="seat"></div>
+    <div id="C24" class="seat"></div>
     <div class="hallway">24</div>
-    <div class="seat"></div>
-    <div class="seat"></div>
-    <div class="seat"></div>
-  </div>
+    <div id="D24" class="seat"></div>
+    <div id="E24" class="seat"></div>
+    <div id="F24" class="seat"></div>
+</div>
+
 
 <div class="row">
-    <div class="seat"></div>
-    <div class="seat"></div>
-    <div class="seat"></div>
+    <div id="A25" class="seat"></div>
+    <div id="B25" class="seat"></div>
+    <div id="C25" class="seat"></div>
     <div class="hallway">25</div>
-    <div class="seat"></div>
-    <div class="seat"></div>
-    <div class="seat"></div>
-  </div>
+    <div id="D25" class="seat"></div>
+    <div id="E25" class="seat"></div>
+    <div id="F25" class="seat"></div>
+</div>
 
 <div class="row">
-    <div class="seat"></div>
-    <div class="seat"></div>
-    <div class="seat"></div>
+    <div id="A26" class="seat"></div>
+    <div id="B26"class="seat"></div>
+    <div id="C26"class="seat"></div>
     <div class="hallway">26</div>
-    <div class="seat"></div>
-    <div class="seat"></div>
-    <div class="seat"></div>
+    <div id="D26"class="seat"></div>
+    <div id="E26"class="seat"></div>
+    <div id="F26"class="seat"></div>
   </div>
 
 <div class="sidehallway">
 </div>
-
-<form>
-  <label for="rangée">Rangée:</label>
-  <select name="rangée" id="rangée">
-    <option value="">1</option>
-    <option value="">2</option>
-    <option value="">3</option>
-    <option value="">4</option>
-    <option value="">5</option>
-    <option value="">6</option>
-    <option value="">7</option>
-    <option value="">8</option>
-    <option value="">9</option>
-    <option value="">10</option>
-    <option value="">11</option>
-    <option value="">12</option>
-    <option value="">13</option>
-    <option value="">14</option>
-    <option value="">15</option>
-    <option value="">16</option>
-    <option value="">17</option>
-    <option value="">18</option>
-    <option value="">19</option>
-    <option value="">20</option>
-    <option value="">21</option>
-    <option value="">22</option>
-    <option value="">23</option>
-    <option value="">24</option>
-    <option value="">25</option>
-    <option value="">26</option>
-  </select>
-</form>
-
-<form>
-  <label for="siège">Siège:</label>
-  <select name="siège" id="siège">
-    <option value="">A</option>
-    <option value="">B</option>
-    <option value="">C</option>
-    <option value="">D</option>
-    <option value="">E</option>
-    <option value="">F</option>
-  </select>
-</form>
 
 <form>
   <label for="Depart">Départ:</label>
@@ -379,20 +340,28 @@
 
   </select>
   <br><br>
-  <input type="submit" value="Réserver et Payer">
 </form>
+ <button id="validate">Valider et payer</button>
+    <script>
+        let selectedDiv = null;
 
-  <!-- Pied de page -->
-<footer id="footer">
-  <div class="footer-content">
-    <p>&copy; 2025 Air Kyrgyzstan. Tous droits réservés.</p>
-    <p>
-      <a href="contact.html">Contact</a> |
-      <a href="mentions-legales.html">Mentions légales</a> |
-      <a href="https://www.instagram.com/kyrgyzstan.guide/" target="_blank">Instagram</a>
-    </p>
-  </div>
-</footer>
-  
+        document.querySelectorAll('.seat').forEach(div => {
+            div.addEventListener('click', () => {
+              console.log("Div cliqué :", div.id); // Vérification
+              if (selectedDiv) selectedDiv.classList.remove('selected');
+              selectedDiv = div;
+              selectedDiv.classList.add('selected');
+            });
+        });
+
+        document.getElementById('validate').addEventListener('click', () => {
+            if (selectedDiv) {
+                localStorage.setItem('selectedDivId', selectedDiv.id);
+                window.location.href = "reserve.html"; // Remplace avec la vraie destination
+            } else {
+                alert("Veuillez sélectionner un siège avant de valider.");
+            }
+        });
+    </script>
 </body>
 </html>
