--- a/Projet web pour ouvrir html/reserve.html
+++ b/Projet web pour ouvrir html/reserve.html
@@ -28,7 +28,7 @@
   <!-- Contenu de la page -->
   <div id="acheter-billet">
     <h2>Votre demande a été enregistrée!</h2>
-    <p>Procédér au payement</p>
+    <p>Procéder au payement</p>
   </div>
 
 </body>
