--- a/Projet web pour ouvrir html/acheter-billet.html
+++ b/Projet web pour ouvrir html/acheter-billet.html
@@ -41,77 +41,77 @@
     <div class="lettre">F</div>
   </div>
 
-  <div class="row">
-    <div class="seat"></div>
-    <div class="seat"></div>
-    <div class="seat"></div>
+<div class="row">
+    <div id="A1" class="seat"></div>
+    <div id="B1" class="seat"></div>
+    <div id="C1" class="seat"></div>
     <div class="hallway">1</div>
-    <div class="seat"></div>
-    <div class="seat"></div>
-    <div class="seat"></div>
-  </div>
+    <div id="D1" class="seat"></div>
+    <div id="E1" class="seat"></div>
+    <div id="F1" class="seat"></div>
+</div>
 
-  <div class="row">
-    <div class="seat"></div>
-    <div class="seat"></div>
-    <div class="seat"></div>
+<div class="row">
+    <div id="A2" class="seat"></div>
+    <div id="B2" class="seat"></div>
+    <div id="C2" class="seat"></div>
     <div class="hallway">2</div>
-    <div class="seat"></div>
-    <div class="seat"></div>
-    <div class="seat"></div>
-  </div>
+    <div id="D2" class="seat"></div>
+    <div id="E2" class="seat"></div>
+    <div id="F2" class="seat"></div>
+</div>
 
-  <div class="row">
-    <div class="seat"></div>
-    <div class="seat"></div>
-    <div class="seat"></div>
+<div class="row">
+    <div id="A3" class="seat"></div>
+    <div id="B3" class="seat"></div>
+    <div id="C3" class="seat"></div>
     <div class="hallway">3</div>
-    <div class="seat"></div>
-    <div class="seat"></div>
-    <div class="seat"></div>
-  </div>
+    <div id="D3" class="seat"></div>
+    <div id="E3" class="seat"></div>
+    <div id="F3" class="seat"></div>
+</div>
 
-  <div class="row">
-    <div class="seat"></div>
-    <div class="seat"></div>
-    <div class="seat"></div>
+<div class="row">
+    <div id="A4" class="seat"></div>
+    <div id="B4" class="seat"></div>
+    <div id="C4" class="seat"></div>
     <div class="hallway">4</div>
-    <div class="seat"></div>
-    <div class="seat"></div>
-    <div class="seat"></div>
-  </div>
+    <div id="D4" class="seat"></div>
+    <div id="E4" class="seat"></div>
+    <div id="F4" class="seat"></div>
+</div>
 
-  <div class="row">
-    <div class="seat"></div>
-    <div class="seat"></div>
-    <div class="seat"></div>
+<div class="row">
+    <div id="A5" class="seat"></div>
+    <div id="B5" class="seat"></div>
+    <div id="C5" class="seat"></div>
     <div class="hallway">5</div>
-    <div class="seat"></div>
-    <div class="seat"></div>
-    <div class="seat"></div>
-  </div>
+    <div id="D5" class="seat"></div>
+    <div id="E5" class="seat"></div>
+    <div id="F5" class="seat"></div>
+</div>
 
-  <div class="row">
-    <div class="seat"></div>
-    <div class="seat"></div>
-    <div class="seat"></div>
+<div class="row">
+    <div id="A6" class="seat"></div>
+    <div id="B6" class="seat"></div>
+    <div id="C6" class="seat"></div>
     <div class="hallway">6</div>
-    <div class="seat"></div>
-    <div class="seat"></div>
-    <div class="seat"></div>
-  </div>
+    <div id="D6" class="seat"></div>
+    <div id="E6" class="seat"></div>
+    <div id="F6" class="seat"></div>
+</div>
 
-  <div class="row">
-    <div class="seat"></div>
-    <div class="seat"></div>
-    <div class="seat"></div>
+<div class="row">
+    <div id="A7" class="seat"></div>
+    <div id="B7" class="seat"></div>
+    <div id="C7" class="seat"></div>
     <div class="hallway">7</div>
-    <div class="seat"></div>
-    <div class="seat"></div>
-    <div class="seat"></div>
-  </div>
+    <div id="D7" class="seat"></div>
+    <div id="E7" class="seat"></div>
+    <div id="F7" class="seat"></div>
+</div>
 
-  <div class="row">
+<div class="row">
     <div id="A8" class="seat"></div>
     <div id="B8" class="seat"></div>
     <div id="C8" class="seat"></div>
@@ -301,62 +301,47 @@
 <div class="sidehallway">
 </div>
 
-<form>
-  <label for="Depart">Départ:</label>
-  <select name="Depart" id="Depart">
-    <option value="">Bishkek</option>
-    <option value="">Osh</option>
-    <option value="">Jalal-Abad</option>
-    <option value="">Kazarman</option>
-    <option value="">Kerben</option>
-    <option value="">Pékin</option>
-    <option value="">Moscou</option>
-    <option value="">Hong-Kong</option>
-    <option value="">Kualalumpur</option>
-    <option value="">Volgograd</option>
-    <option value="">Dubai</option>
-    <option value="">New-Dehli</option>
-    <option value="">Astana</option>
-  </select>
-</form>
-
-<form>
-  <label for="Destination">Destination:</label>
-  <select name="Destination" id="Destination">
-    <option value="">Bishkek</option>
-    <option value="">Osh</option>
-    <option value="">Jalal-Abad</option>
-    <option value="">Kazarman</option>
-    <option value="">Kerben</option>
-    <option value="">Pékin</option>
-    <option value="">Moscou</option>
-    <option value="">Hong-Kong</option>
-    <option value="">Kualalumpur</option>
-    <option value="">Volgograd</option>
-    <option value="">Dubai</option>
-    <option value="">New-Dehli</option>
-    <option value="">Astana</option>
+  <div id="contact">
+    <h2>Réserver un vol</h2>
+    <p>Séléctionnez une ville de départ, d'arrivée et votre siège</p>
+    <form action="/contact_ajout" method="POST">
+      <label for="depart">Départ : <input type="text" id="depart" name="new_depart" required></label>
+      <label for="destination">Destination : <input type="text" id="destination" name="new_destinaiton" required></label>
+      <button id="validate" type="submit">Valider et payer</button>
+    </form>
+  </div>
 
 
   </select>
   <br><br>
 </form>
- <button id="validate">Valider et payer</button>
+
+   <!-- Pied de page -->
+<footer id="footer">
+  <div class="footer-content">
+    <p>&copy; 2025 Air Kyrgyzstan. Tous droits réservés.</p>
+    <p>
+      <a href="contact.html">Contact</a> |
+      <a href="mentions-legales.html">Mentions légales</a> |
+      <a href="https://www.instagram.com/kyrgyzstan.guide/" target="_blank">Instagram</a>
+    </p>
+  </div>
+</footer>
+
     <script>
         let selectedDiv = null;
 
         document.querySelectorAll('.seat').forEach(div => {
             div.addEventListener('click', () => {
-              console.log("Div cliqué :", div.id); // Vérification
               if (selectedDiv) selectedDiv.classList.remove('selected');
               selectedDiv = div;
               selectedDiv.classList.add('selected');
+              localStorage.setItem('selectedDivId', selectedDiv.id);
             });
         });
 
         document.getElementById('validate').addEventListener('click', () => {
             if (selectedDiv) {
-                localStorage.setItem('selectedDivId', selectedDiv.id);
                 window.location.href = "reserve.html"; // Remplace avec la vraie destination
             } else {
                 alert("Veuillez sélectionner un siège avant de valider.");
