--- a/Projet web pour ouvrir html/acheter-billet.html
+++ b/Projet web pour ouvrir html/acheter-billet.html
@@ -305,8 +305,8 @@
     <h2>Réserver un vol</h2>
     <p>Séléctionnez une ville de départ, d'arrivée et votre siège</p>
     <form action="/contact_ajout" method="POST">
-      <label for="depart">Départ : <input type="text" id="depart" name="new_depart" required></label>
-      <label for="destination">Destination : <input type="text" id="destination" name="new_destinaiton" required></label>
+      <label for="depart">Départ : <input type="text" id="depart" name="reservation" required></label>
+      <label for="destination">Destination : <input type="text" id="destination" name="reservation" required></label>
       <button id="validate" type="submit">Valider et payer</button>
     </form>
   </div>
