--- a/Projet web pour ouvrir html/avis.html
+++ b/Projet web pour ouvrir html/avis.html
@@ -44,4 +44,16 @@
 	  </ul>
 	
 </body>
+	
+  <!-- Pied de page -->
+<footer id="footer">
+  <div class="footer-content">
+    <p>&copy; 2025 Air Kyrgyzstan. Tous droits réservés.</p>
+    <p>
+      <a href="contact.html">Contact</a> |
+      <a href="mentions-legales.html">Mentions légales</a> |
+      <a href="https://www.instagram.com/kyrgyzstan.guide/" target="_blank">Instagram</a>
+    </p>
+  </div>
+</footer>
 </html>
