--- a/Projet web pour ouvrir html/contact.html
+++ b/Projet web pour ouvrir html/contact.html
@@ -35,7 +35,17 @@
       <button type="submit">Envoyer</button>
     </form>
   </div>
-
+  
+<footer id="footer">
+  <div class="footer-content">
+    <p>&copy; 2025 Air Kyrgyzstan. Tous droits réservés.</p>
+    <p>
+      <a href="contact.html">Contact</a> |
+      <a href="mentions-legales.html">Mentions légales</a> |
+      <a href="https://www.instagram.com/kyrgyzstan.guide/" target="_blank">Instagram</a>
+    </p>
+  </div>
+</footer>
   
 </body>
 </html>
