--- a/Projet web pour ouvrir html/contact.html
+++ b/Projet web pour ouvrir html/contact.html
@@ -35,7 +35,8 @@
       <button type="submit">Envoyer</button>
     </form>
   </div>
-  
+
+<!-- Pied de page -->
 <footer id="footer">
   <div class="footer-content">
     <p>&copy; 2025 Air Kyrgyzstan. Tous droits réservés.</p>
